--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-route": "^1.0.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
