--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-route": "^1.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "uuid": "^8.3.2",
